force-app/main/default/objects/License_Change_Log__c/License_Change_Log__c.object-meta.xml
<CustomObject>
    <description>Log of license changes performed by the automated license sorting batch job. Tracks all license and profile changes for auditing purposes.</description>
    <label>License Change Log</label>
    <nameField>
        <displayFormat>LCL-{0000}</displayFormat>
        <label>License Change Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>