force-app/main/default/objects/License_Change_Log__c/fields/Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Id__c</fullName>
    <label>Batch Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>