force-app/main/default/objects/License_Change_Log__c/fields/Changed_At__c.field-meta.xml
<CustomField>
    <fullName>Changed_At__c</fullName>
    <defaultValue>NOW</defaultValue>
    <label>Changed At</label>
    <type>DateTime</type>
</CustomField>