force-app/main/default/objects/License_Change_Log__c/fields/New_License__c.field-meta.xml
<CustomField>
    <fullName>New_License__c</fullName>
    <label>New License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>