force-app/main/default/objects/License_Change_Log__c/fields/New_Profile__c.field-meta.xml
<CustomField>
    <fullName>New_Profile__c</fullName>
    <label>New Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>