force-app/main/default/objects/License_Change_Log__c/fields/Old_License__c.field-meta.xml
<CustomField>
    <fullName>Old_License__c</fullName>
    <label>Old License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>