force-app/main/default/objects/License_Change_Log__c/fields/Old_Profile__c.field-meta.xml
<CustomField>
    <fullName>Old_Profile__c</fullName>
    <label>Old Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>