force-app/main/default/objects/License_Change_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>License Change Logs</relationshipLabel>
    <relationshipName>License_Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>